@@ -315,167 +315,3 @@ class Sabel_Db_Finder
     }
   }
 }
-
-function eq($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::EQUAL, $column, $value
-  );
-}
-
-function neq($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::EQUAL, $column, $value, true
-  );
-}
-
-function in($column, array $values)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::IN, $column, $values
-  );
-}
-
-function nin($column, array $values)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::IN, $column, $values, true
-  );
-}
-
-function lt($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::LESS_THAN, $column, $value
-  );
-}
-
-function le($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::LESS_EQUAL, $column, $value
-  );
-}
-
-function gt($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::GREATER_THAN, $column, $value
-  );
-}
-
-function ge($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::GREATER_EQUAL, $column, $value
-  );
-}
-
-function bw($column, $from, $to = null)
-{
-  if ($to === null) {
-    return __bw($column, $from, false);
-  } else {
-    return __bw($column, array($from, $to), false);
-  }
-}
-
-function nbw($column, $from, $to = null)
-{
-  if ($to === null) {
-    return __bw($column, $from, true);
-  } else {
-    return __bw($column, array($from, $to), true);
-  }
-}
-
-function __bw($column, array $params, $not)
-{
-  if (isset($params["from"])) $params[0] = $params["from"];
-  if (isset($params["to"]))   $params[1] = $params["to"];
-  
-  unset($params["from"], $params["to"]);
-  
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::BETWEEN, $column, $params, $not
-  );
-}
-
-function starts($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::LIKE, $column, $value
-  )->type(Sabel_Db_Condition_Like::STARTS_WITH);
-}
-
-function ends($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::LIKE, $column, $value
-  )->type(Sabel_Db_Condition_Like::ENDS_WITH);
-}
-
-function contains($column, $value)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::LIKE, $column, $value
-  )->type(Sabel_Db_Condition_Like::CONTAINS);
-}
-
-function isNull($column)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::ISNULL, $column
-  );
-}
-
-function isNotNull($column)
-{
-  return Sabel_Db_Condition::create(
-    Sabel_Db_Condition::ISNOTNULL, $column
-  );
-}
-
-function ow(/* args */)
-{
-  $or = new Sabel_Db_Condition_Or();
-  foreach (func_get_args() as $condition) {
-    $or->add($condition);
-  }
-  
-  return $or;
-}
-
-function aw(/* args */)
-{
-  $and = new Sabel_Db_Condition_And();
-  foreach (func_get_args() as $condition) {
-    $and->add($condition);
-  }
-  
-  return $and;
-}
-
-function rel($mdlName)
-{
-  return new Sabel_Db_Join_Relation($mdlName);
-}
-
-function innerJoin($mdlName, $on = array(), $alias = "")
-{
-  $join = new Sabel_Db_Join_Object($mdlName);
-  return $join->setAlias($alias)->setJoinKey($on)->setJoinType("INNER");
-}
-
-function leftJoin($mdlName, $on = array(), $alias = "")
-{
-  $join = new Sabel_Db_Join_Object($mdlName);
-  return $join->setAlias($alias)->setJoinKey($on)->setJoinType("LEFT");
-}
-
-function rightJoin($mdlName, $on = array(), $alias = "")
-{
-  $join = new Sabel_Db_Join_Object($mdlName);
-  return $join->setAlias($alias)->setJoinKey($on)->setJoinType("RIGHT");
-}
