@@ -315,83 +315,3 @@ function strtoint($str)
     return (is_number($str)) ? (int)$str : 0;
   }
 }
-
-/***   sabel.db functions   ***/
-
-function is_model($model)
-{
-  return ($model instanceof Sabel_Db_Model);
-}
-
-function convert_to_tablename($mdlName)
-{
-  static $cache = array();
-  
-  if (isset($cache[$mdlName])) {
-    return $cache[$mdlName];
-  }
-  
-  if (preg_match("/^[a-z0-9_]+$/", $mdlName)) {
-    $tblName = $mdlName;
-  } else {
-    $tblName = substr(strtolower(preg_replace("/([A-Z])/", '_$1', $mdlName)), 1);
-  }
-  
-  return $cache[$mdlName] = $tblName;
-}
-
-function convert_to_modelname($tblName)
-{
-  static $cache = array();
-  
-  if (isset($cache[$tblName])) {
-    return $cache[$tblName];
-  } else {
-    $mdlName = implode("", array_map("ucfirst", explode("_", $tblName)));
-    return $cache[$tblName] = $mdlName;
-  }
-}
-
-function MODEL($mdlName, $id = null)
-{
-  static $cache = array();
-  
-  if (isset($cache[$mdlName])) {
-    if ($cache[$mdlName]) {
-      return new $mdlName($id);
-    } else {
-      return new Sabel_Db_Model_Proxy($mdlName, $id);
-    }
-  }
-  
-  if (!$exists = class_exists($mdlName, false)) {
-    $path = MODELS_DIR_PATH . DS . $mdlName . ".php";
-    $exists = Sabel::fileUsing($path, true);
-  }
-  
-  $cache[$mdlName] = $exists;
-  
-  if ($exists) {
-    return new $mdlName($id);
-  } else {
-    return new Sabel_Db_Model_Proxy($mdlName, $id);
-  }
-}
-
-function finder($mdlName, $projection = null)
-{
-  return new Sabel_Db_Finder($mdlName, $projection);
-}
-
-function create_join_key(Sabel_Db_Model $childModel, $parentName)
-{
-  if ($fkey = $childModel->getMetadata()->getForeignKey()) {
-    foreach ($fkey->toArray() as $colName => $fkey) {
-      if ($fkey->table === $parentName) {
-        return array("id" => $fkey->column, "fkey" => $colName);
-      }
-    }
-  }
-  
-  return array("id" => "id", "fkey" => $parentName . "_id");
-}
